[package]
name = "psp22"
version = "0.3.0"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://github.com/Cardinal-Cryptography/PSP22"
repository = "https://github.com/Cardinal-Cryptography/PSP22"
license = "Apache-2.0"
readme = "README.md"
description = "Minimal implementation of PSP22 token standard in pure ink!(image:paritytech/contracts-verifiable:4.0.2)"
exclude = [ ".github/*" ]

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
# default = ["std", "contract"]
std = ["ink/std"]
# contract = []
ink-as-dependency = []
